--- a/src/图形平移.html
+++ b/src/图形平移.html
@@ -13,10 +13,12 @@
         <script type="notjs" id="vertex">
             attribute vec4 a_position;
             attribute vec4 a_color;
-            uniform vec4 a_translate;
+            // uniform vec4 a_translate;
+            uniform mat4 a_translate;
             varying vec4 v_color;
             void main(){
-                gl_Position = vec4(a_position + a_translate);
+                // gl_Position = vec4(a_position + a_translate);
+                gl_Position = a_translate * a_position;
                 v_color = a_color;
             }
         </script>
@@ -43,7 +45,18 @@
             const a_position = gl.getAttribLocation(program, 'a_position');
             const a_color = gl.getAttribLocation(program, 'a_color');
             const a_translate = gl.getUniformLocation(program, 'a_translate');
-            gl.uniform4f(a_translate, 0.5, -0.5,0,0);
+            // gl.uniform4f(a_translate, 0.5, -0.5,0,0);
+
+            // 矩阵平移
+            const Tx = 0.5;
+            const Ty = -0.5;
+            const Tz = 0;
+            gl.uniformMatrix4fv(a_translate, false, new Float32Array([
+                1, 0, 0, 0,
+                0, 1, 0, 0,
+                0, 0, 1, 0,
+                Tx, Ty, Tz, 1
+            ]))
 
             const positionBuffer = gl.createBuffer();
             gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
