--- a/src/WebGL/绘制圆.html
+++ b/src/WebGL/绘制圆.html
@@ -5,23 +5,24 @@
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <script src="./utils/utils.js"></script>
-        <title>图形缩放</title>
+        <script src="../utils/utils.js"></script>
+        <title>绘制圆</title>
     </head>
     <body>
         <canvas width="500" height="500" id="canvas"></canvas>
         <script type="notjs" id="vertex">
-            attribute vec4 a_position;
+            attribute vec2 a_position;
             attribute vec4 a_color;
+            uniform vec2 screenSize;
             varying vec4 v_color;
-            uniform mat4 scaleMatrix;
+            attribute float pointSize;
             void main(){
-                gl_Position = scaleMatrix * a_position;
+                float x = a_position.x * 2.0 / screenSize.x - 1.0;
+                float y = 1.0 - (a_position.y * 2.0 / screenSize.y);
+                gl_Position = vec4(x,y,0,1);
+                gl_PointSize = 10.0;
                 v_color = a_color;
             }
-
-
-
         </script>
         <script type="notjs" id="fragment">
             precision mediump float;
@@ -29,17 +30,13 @@
             void main(){
                 gl_FragColor = v_color;
             }
-
-
-
         </script>
         <script>
             const canvas = document.getElementById('canvas');
             const gl = canvas.getContext('webgl');
             if (!gl) {
-                alert('不支持webgl');
+                alert('不支持webgl')
             }
-
             const vertexStr = document.getElementById('vertex').innerText;
             const fragmentStr = document.getElementById('fragment').innerText;
             const vertexShader = createShader(gl, gl.VERTEX_SHADER, vertexStr);
@@ -49,35 +46,29 @@
 
             const a_position = gl.getAttribLocation(program, 'a_position');
             const a_color = gl.getAttribLocation(program, 'a_color');
-            const scaleMatrix = gl.getUniformLocation(program, 'scaleMatrix');
-
-            const Sx = 1.5;
-            const Sy = 0.5;
-            const Sz = 1;
-            gl.uniformMatrix4fv(scaleMatrix, false, new Float32Array([
-                Sx, 0, 0, 0,
-                0, Sy, 0, 0,
-                0, 0, Sz, 0,
-                0, 0, 0, 1,
-            ]))
+            const screenSize = gl.getUniformLocation(program, 'screenSize');
+            gl.uniform2f(screenSize, canvas.width, canvas.height);
 
             const positionBuffer = gl.createBuffer();
-            gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
-            gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
-                -0.5, 0, 0, 1, 0, 0,
-                -0.5, -0.5, 0, 0, 1, 0,
-                0, -0.5, 0, 0, 0, 1,
-
-                0, -0.5, 0, 0, 0, 1,
-                0, 0, 0, 0, 1, 0,
-                -0.5, 0, 0, 1, 0, 0,
-            ]), gl.STATIC_DRAW);
-
-            gl.vertexAttribPointer(a_position, 3, gl.FLOAT, false, 4 * 6, 0);
-            gl.vertexAttribPointer(a_color, 3, gl.FLOAT, false, 4 * 6, 4 * 3);
+            gl.bindBuffer(gl.ARRAY_BUFFER,positionBuffer);
+            gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(circlePoints(100,100,50,50)), gl.STATIC_DRAW);
+            gl.vertexAttribPointer(a_position,2,gl.FLOAT,false,4*5,0);
+            gl.vertexAttribPointer(a_color,3,gl.FLOAT,false,4*5,4*2);
             gl.enableVertexAttribArray(a_position);
             gl.enableVertexAttribArray(a_color);
-            gl.drawArrays(gl.TRIANGLE_FAN, 0, 6);
+            gl.drawArrays(gl.TRIANGLE_FAN,0,52);
+
+            function circlePoints(x,y,radius,n){
+                const points = [x,y,1,0,0];
+                for (let i = 0; i <= n; i++) {
+                    const angle = i * Math.PI * 2 / n;
+                    const pointX = radius * Math.cos(angle) + x;
+                    const pointY = radius * Math.sin(angle) + y;
+                    points.push(pointX,pointY,Math.random(),Math.random(),Math.random());
+                }
+                return points;
+            }
+            circlePoints(100,100,10,8);
         </script>
     </body>
 </html>
