--- a/src/WebGL/绘制圆环.html
+++ b/src/WebGL/绘制圆环.html
@@ -5,8 +5,8 @@
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <script src="./utils/utils.js"></script>
-        <title>绘制矩形</title>
+        <script src="../utils/utils.js"></script>
+        <title>绘制圆环</title>
     </head>
     <body>
         <canvas width="500" height="500" id="canvas"></canvas>
@@ -24,9 +24,6 @@
                 v_color = a_color;
             }
 
-
-
-
         </script>
         <script type="notjs" id="fragment">
             precision mediump float;
@@ -34,9 +31,6 @@
             void main(){
                 gl_FragColor = v_color;
             }
-
-
-
 
         </script>
         <script>
@@ -56,63 +50,63 @@
             const a_color = gl.getAttribLocation(program, 'a_color');
             const screenSize = gl.getUniformLocation(program, 'screenSize');
             gl.uniform2f(screenSize, canvas.width, canvas.height);
-            // const color = randomColor();
-            // gl.vertexAttrib4f(a_color, color.r, color.g, color.b, color.a);
 
-            // const positionBuffer = gl.createBuffer();
-            // gl.ARRAY_BUFFER方式绘制矩形
-            // gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
-            // gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
-            //     50,50,
-            //     50,100,
-            //     150,100,
-            //
-            //     150,100,
-            //     150,50,
-            //     50,50
-            // ]),gl.STATIC_DRAW);
-            // gl.vertexAttribPointer(a_position,2,gl.FLOAT,false,4*2,0);
-            // gl.enableVertexAttribArray(a_position);
-            // gl.drawArrays(gl.TRIANGLES,0,6);
-
-            // gl.ELEMENT_ARRAY_BUFFER绘制矩形
-            // const positionBuffer = gl.createBuffer();
-            // gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
-            // gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
-            //     50, 50, 1, 0, 0,
-            //     50, 100, 0, 1, 0,
-            //
-            //     150, 100, 0, 0, 1,
-            //     150, 50, 1, 1, 0
-            // ]), gl.STATIC_DRAW);
-            // const indexBuffer = gl.createBuffer();
-            // gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, indexBuffer);
-            // gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, new Uint16Array([
-            //     0, 1, 2,
-            //     2, 3, 0
-            // ]), gl.STATIC_DRAW);
-            // gl.vertexAttribPointer(a_position, 2, gl.FLOAT, false, 4 * 5, 0);
-            // gl.vertexAttribPointer(a_color, 3, gl.FLOAT, false,4*5,4*2);
-            // gl.enableVertexAttribArray(a_position);
-            // gl.enableVertexAttribArray(a_color);
-            // gl.drawElements(gl.TRIANGLES, 6, gl.UNSIGNED_SHORT, 0);
-
-            // 三角形扇方式绘制
             const positionBuffer = gl.createBuffer();
+            const indexBuffer = gl.createBuffer();
             gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
-            gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
-                100, 75, 0, 1, 0,
-                50, 50, 1, 0, 0,
-                50, 100, 0, 1, 0,
-                150, 100, 0, 0, 1,
-                150, 50, 1, 1, 0,
-                50, 50, 1, 0, 0,
-            ]), gl.STATIC_DRAW);
+            gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, indexBuffer);
+
+            const points = circlePoints(100, 100, 80, 50, 3).points;
+            const index = circlePoints(100, 100, 80, 50, 3).index;
+            console.log(points,'points');
+            console.log(index, 'index');
+            gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(points), gl.STATIC_DRAW);
+            gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, new Uint16Array(index), gl.STATIC_DRAW);
+
             gl.vertexAttribPointer(a_position, 2, gl.FLOAT, false, 4 * 5, 0);
             gl.vertexAttribPointer(a_color, 3, gl.FLOAT, false, 4 * 5, 4 * 2);
             gl.enableVertexAttribArray(a_position);
             gl.enableVertexAttribArray(a_color);
-            gl.drawArrays(gl.TRIANGLE_FAN, 0, 6);
+
+            // gl.drawArrays(gl.TRIANGLE_FAN,0,52);
+            gl.drawElements(gl.TRIANGLE_STRIP, index.length, gl.UNSIGNED_SHORT, 0);
+
+            // function circlePoints(x,y,radius,n){
+            //     const points = [x,y,1,0,0];
+            //     for (let i = 0; i <= n; i++) {
+            //         const angle = i * Math.PI * 2 / n;
+            //         const pointX = radius * Math.cos(angle) + x;
+            //         const pointY = radius * Math.sin(angle) + y;
+            //         points.push(pointX,pointY,Math.random(),Math.random(),Math.random());
+            //     }
+            //     return points;
+            // }
+
+            function circlePoints(x, y, outerRadius, innerRadius, n) {
+                const points = [];
+                const index = [];
+                for (let i = 0; i < n; i++) {
+                    const color = randomColor();
+                    const angle = i * Math.PI * 2 / n;
+                    const outerX = outerRadius * Math.cos(angle) + x;
+                    const outerY = outerRadius * Math.sin(angle) + y;
+                    const innerX = innerRadius * Math.cos(angle) + x;
+                    const innerY = innerRadius * Math.sin(angle) + y;
+                    points.push(innerX, innerY, color.r, color.g, color.b);
+                    points.push(outerX, outerY, color.r, color.g, color.b);
+
+                    let v0 = i * 2;
+                    let v1 = v0 + 1;
+                    let v2 = v0 + 2;
+                    let v3 = v0 + 3;
+                    if (i === n - 1) {
+                        v2 = 0;
+                        v3 = 1;
+                    }
+                    index.push(v0, v1, v2, v3);
+                }
+                return {points, index};
+            }
         </script>
     </body>
 </html>
