环境光下的漫反射

--- a/src/WebGL/光照/1. 平行光下的漫反射.html
+++ b/src/WebGL/光照/1. 平行光下的漫反射.html
@@ -7,6 +7,7 @@
     <script src="../../utils/cuon-matrix.js"></script>
 </head>
 <body>
+<!-- 与只有平行光对比，有明显的区别 -->
 <canvas id="canvas" width="500" height="500"></canvas>
 <!--
     a_normal:法向量  需要进行归一化 与入射方向点积操作，获取入射角
